Fixed centre alignment home

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -24,10 +24,10 @@
 .homegrid {
     display: grid;
     grid-template-rows: 3fr 1fr 1fr 1fr 3fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 1fr 0.5fr;
     color: var(--white);
     justify-items: center;
-    height: 100vh
+    height: 100vh;
 }
 
 .dinein {
@@ -36,12 +36,12 @@
 }
 
 .takeaway {
-    grid-column: 4;
+    grid-column: 5;
     grid-row: 3;
 }
 
 .hero-logo {
-    grid-column: 3;
+    grid-column: 3/5;
     grid-row: 2;
     width: 400px;
 }
@@ -103,7 +103,7 @@
 
 .button--takeaway {
     grid-row: 4;
-    grid-column: 4;
+    grid-column: 5;
 }
 
 .button--dinein {
